[package]
name = "mev"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3

[dependencies]
chrono = "0.4.19"
ethers = { version = "0.6.2", features = ["ws", "rustls"] }
ethers-flashbots = "0.8.2"
url = "2.2.2"
tokio = { version = "1.19.2", features = ["full"] }
serde_json = "1.0.81"
async-trait = "0.1.56"